completed lightining web components basics badge

--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -1,15 +1,5 @@
 <template>
-    <template lwc:if={ready}>
-      <div id="display">
-        <div>Name: {name}</div>
-        <div>Description: {description}</div>
-        <div>Category: {category}</div>
-        <div>Material: {material}</div>
-        <div>Price: {price}</div>
-        <div><img src={pictureUrl}/></div>
-      </div>
-    </template>
-    <template lwc:else>
-      <div id="waiting">Loading…</div>
-    </template>
+    <div>
+      <c-bike bike={bike}></c-bike>
+    </div>
   </template>
